# weaviate-langchain-langchain_indexing_api

./: .gitignore  README.md  client.py  docker-compose.yml  indexing_api.py  pyproject.toml
